syntax = "proto3";

import "google/protobuf/timestamp.proto";

package metrics;

message TrafficMetrics {
  // @inject_tag: labelnames:"interface" help:"traffic metrics on each interface per-connection"
  uint64 tx_packets = 1;
  uint64 tx_octets = 2;
  uint64 rx_packets = 3;
  uint64 rx_octets = 4;
}

message TrafficVolume {
  // @inject_tag: label:"interface=?" help:"which interface are packets transmitted/received from"
  string interface = 1;
  TrafficMetrics metrics = 2;
}

enum L4Protocol {
  OTHER = 0;
  ICMP = 1;
  TCP = 6;
  UDP = 17;
}

enum QosLevel {
  CONTROL = 0;
  LOW = 1;
  NORMAL = 2;
  HIGH = 3;
}

enum Status {
  CREATED = 0;
  DESTROY = 1;
  UPDATE = 2;
}

message TrafficTuple {
  bytes client_ip = 1;
  uint32 client_port = 2;
  L4Protocol proto = 3;
  bytes remote_ip = 4;
  uint32 remote_port = 5;

  int64 establish_at = 6;
  int64 report_at = 7;

  uint32 application = 8;
  string client_hostname = 9;
  string client_username = 10;
  string client_operating_system = 11;

  QosLevel qos = 12;
  Status status = 13;

  repeated TrafficVolume traffic_volume = 14;
  bytes mac_address = 15;
  uint64 magic = 16;
  uint32 icmpid = 17;
}

message AccumulatedTraffic {
  string device_sn = 1;
  repeated TrafficTuple traffic_tuple = 2;
  google.protobuf.Timestamp timestamp = 3;
}

message DeltaTraffic {
  repeated TrafficTuple traffic_tuple = 1;
}

message FlowTrafficInfo {
  string device_sn = 1;
  google.protobuf.Timestamp timestamp = 2;
  AccumulatedTraffic AccumulatedTraffic = 3;
  DeltaTraffic DeltaTraffic = 4;
}

